Implemented role-based JWT authentication and secured WMS APIs